--- a/lecture25.html
+++ b/lecture25.html
@@ -8,17 +8,17 @@
 <body ng-init="customers=[{joined :'2000-12-02', name:'John', city:'Chandler', orderTotal:9.9956},
     					  {joined :'1965-01-25', name:'Zed', city:'Las Vegas', orderTotal:19.99},
     					  {joined :'1944-06-15', name:'Tina', city:'New York', orderTotal:44.99},
-    					  {joined :'1995-03-28', name:'Zed', city:'Seattle', orderTotal:101.5}]">
+    					  {joined :'1995-03-28', name:'Dave', city:'Seattle', orderTotal:101.5}]">
 	<h2>Customers</h2>
-    Filter: <input type="text" ng-model="nameText">
+    Filter: <input type="text" ng-model="customersFilter.name">
 	<table>
 		<tr>
-			<td>Name</td>
-			<td>City</td>
-			<td>Order</td>
-			<td>Joined</td>
+			<th ng-click="sortBy='name';reverse=!reverse">Name</th>
+			<th ng-click="sortBy='city';reverse=!reverse">City</th>
+			<th ng-click="sortBy='orderTotal';reverse=!reverse">Order</th> 
+			<th ng-click="sortBy='joined';reverse=!reverse">Joined</th>
 		</tr>
-		<tr ng-repeat="cust in customers">
+		<tr ng-repeat="cust in customers | filter:customersFilter | orderBy:sortBy:reverse">
 			<td>{{ cust.name | uppercase }}</td>
 			<td>{{ cust.city | lowercase }}</td>
 			<td>{{ cust.orderTotal | currency:'$d:' }}</td>
