--- a/lecture31.html
+++ b/lecture31.html
@@ -5,7 +5,7 @@
     <title>AngularJS Hello</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
-<body ng-controller="CustomersController">
+<body ng-controller="customersController">
 	<h2>Customers</h2>
     Filter: <input type="text" ng-model="customersFilter.name">
 	<table>
@@ -23,6 +23,7 @@
 		</tr>
 	</table>
 	<br>
+	<span>Total customers: {{ customers.length }}</span>
     
     <script src="libs/angularjs/angular.js"></script>
     <script> 
