--- a/lecture36.html
+++ b/lecture36.html
@@ -2,20 +2,20 @@
 <html lang="en" ng-app="myApp">
 <head>
     <meta charset="UTF-8">
-    <title>AngularJS Hello</title>
+    <title>Lecture 034 - Using "Controller As" Syntax</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
-<body ng-controller="customersController">
+<body ng-controller="customersController as ctrl">
 	<h2>Customers</h2>
     Filter: <input type="text" ng-model="customersFilter.name">
 	<table>
 		<tr>
-			<th ng-click="doSort('name')">Name</th>
-			<th ng-click="doSort('city')">City</th>
-			<th ng-click="doSort('orderTotal')">Order</th> 
-			<th ng-click="doSort('joined')">Joined</th>
+			<th ng-click="ctrl.doSort('name')">Name</th>
+			<th ng-click="ctrl.doSort('city')">City</th>
+			<th ng-click="ctrl.doSort('orderTotal')">Order</th> 
+			<th ng-click="ctrl.doSort('joined')">Joined</th>
 		</tr>
-		<tr ng-repeat="cust in customers | filter:customersFilter | orderBy:sortBy:reverse">
+		<tr ng-repeat="cust in ctrl.customers | filter:customersFilter | orderBy:sortBy:reverse">
 			<td>{{ cust.name | uppercase }}</td>
 			<td>{{ cust.city | lowercase }}</td>
 			<td>{{ cust.orderTotal | currency }}</td>
@@ -23,9 +23,11 @@
 		</tr>
 	</table>
 	<br>
-	<span>Total customers: {{ customers.length }}</span>
+	<span>Total customers: {{ ctrl.customers.length }}</span>
+    reverse = {{ ctrl.reverse }}
     
     <script src="libs/angularjs/angular.js"></script>
+	<script src="app/controllers/app.js"></script>
 	<script src="app/controllers/customersController.js"></script>
 </body>
 </html>
