--- a/lecture38.html
+++ b/lecture38.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="customersApp">
 <head>
     <meta charset="UTF-8">
-    <title>Lecture 034 - Using "Controller As" Syntax</title>
+    <title>Lecture 38</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body ng-controller="customersController as ctrl">
@@ -10,12 +10,12 @@
     Filter: <input type="text" ng-model="customersFilter.name">
 	<table>
 		<tr>
-			<th ng-click="ctrl.doSort('name')">Name</th>
-			<th ng-click="ctrl.doSort('city')">City</th>
-			<th ng-click="ctrl.doSort('orderTotal')">Order</th> 
-			<th ng-click="ctrl.doSort('joined')">Joined</th>
+			<th ng-click="doSort('name')">Name</th>
+			<th ng-click="doSort('city')">City</th>
+			<th ng-click="doSort('orderTotal')">Order</th>
+			<th ng-click="doSort('joined')">Joined</th>
 		</tr>
-		<tr ng-repeat="cust in ctrl.customers | filter:customersFilter | orderBy:sortBy:reverse">
+		<tr ng-repeat="cust in customers | filter:customersFilter | orderBy:sortBy:reverse">
 			<td>{{ cust.name | uppercase }}</td>
 			<td>{{ cust.city | lowercase }}</td>
 			<td>{{ cust.orderTotal | currency }}</td>
@@ -23,9 +23,8 @@
 		</tr>
 	</table>
 	<br>
-	<span>Total customers: {{ ctrl.customers.length }}</span>
-    reverse = {{ ctrl.reverse }}
-    
+	<span>Total customers: {{ customers.length }}</span>
+
     <script src="libs/angularjs/angular.js"></script>
 	<script src="app/controllers/app.js"></script>
 	<script src="app/controllers/customersController.js"></script>
