Finished about factory in AngularJS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="customersApp">
 <head>
     <meta charset="UTF-8">
-    <title>Lecture 38</title>
+    <title>Index</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -14,5 +14,6 @@
 	<script src="app/app.js"></script>
 	<script src="app/controllers/customersController.js"></script>
 	<script src="app/controllers/ordersController.js"></script>
+	<script src="app/services/customersFactory.js"></script>
 </body>
 </html>
