--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#/customers">Customers</a></li>
+                <li><a href="#/orders">Orders</a></li>
+            </ul>
+        </nav> 
+    </header>
 	
     <div ng-view></div>
 
