--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body class="container-fluid"> 
 
     <header>
-        <nav>
-            <ul>
+        <nav class="navbar navbar-default">
+            <ul class="nav navbar-nav"> 
                 <li><a href="#/customers">Customers</a></li>
                 <li><a href="#/orders">Orders</a></li>
             </ul>
@@ -23,6 +24,7 @@
 	<script src="app/app.js"></script>
     <script src="app/controllers/customersController.js"></script>
     <script src="app/controllers/ordersController.js"></script>
+    <script src="app/controllers/allOrdersController.js"></script>
     <script src="app/services/customersFactory.js"></script>
     <script src="app/services/values.js"></script>
 </body>
