--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Index</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/animations.css" rel="stylesheet" type="text/css">
 </head>
 <body class="container-fluid"> 
 
@@ -17,10 +18,13 @@
         </nav> 
     </header>
 	
-    <div ng-view></div>
+    <main>
+        <div ng-view class="slide-animation"></div>
+    </main>
 
     <script src="libs/angularjs/angular.js"></script>
     <script src="libs/angularjs/angular-route.js"></script>
+    <script src="libs/angularjs/angular-animate.js"></script>
 	<script src="app/app.js"></script>
     <script src="app/controllers/customersController.js"></script>
     <script src="app/controllers/ordersController.js"></script>
